start adding calendar

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -82,6 +82,14 @@ h1
     .list-group-item-heading
       text-decoration: line-through;
 
+
+/*calendar start*/
+.calendar
+  .title
+    text-align: center
+    padding 13px 0 0 0
+
+/*calendar end*/
 /*animate ui view*/
 .ui-view-container
   position: relative;
@@ -95,10 +103,10 @@ h1
   position: absolute;
   left: 0;
   right: 0;
-  -webkit-transition:all .5s ease-in-out;
-  -moz-transition:all .5s ease-in-out;
-  -o-transition:all .5s ease-in-out;
-  transition:all .5s ease-in-out;
+  -webkit-transition:all .2s ease-in-out;
+  -moz-transition:all .2s ease-in-out;
+  -o-transition:all .2s ease-in-out;
+  transition:all .2s ease-in-out;
 
 
 [ui-view].ng-enter
