--- a/src/app/events/total/total.tpl.html
+++ b/src/app/events/total/total.tpl.html
@@ -1,8 +1,4 @@
-<div ng-controller="EventsTotalCtrl">
+<div ng-controller="EventsTotalCtrl" ng-swipe-left="swipeLeft()">
     <event-list-with-date day="today"></event-list-with-date>
     <event-list-with-date day="tomorrow"></event-list-with-date>
-
-    <!--<div ng-repeat="day in week">
-        <event-list-with-date day="day"></event-list-with-date>
-    </div>-->
 </div>
