--- a/src/app/events/total/total.tpl.html
+++ b/src/app/events/total/total.tpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="EventsTotalCtrl" ng-swipe-left="swipeLeft()">
+<div ng-controller="EventsTotalCtrl">
     <event-list-with-date day="today"></event-list-with-date>
     <event-list-with-date day="tomorrow"></event-list-with-date>
 </div>
