--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -51,14 +51,16 @@ h1
 .events-list
   .event
     background #fff
-    padding 15px 10px
     border-bottom 1px solid lightgrey
 
+    .content
+      padding 15px 10px
     .meta
       color rgb(126, 126, 126)
       font-size 12px
       margin 6px 0 0
-
+    .btn
+      width 50%
     .title
       font-size 16px
       margin-bottom 5px
@@ -85,6 +87,7 @@ h1
 
 /*calendar start*/
 .calendar
+  margin-bottom 10px
   .title
     text-align: center
     padding 13px 0 0 0
