--- a/src/app/events/edit/edit.tpl.html
+++ b/src/app/events/edit/edit.tpl.html
@@ -14,7 +14,7 @@
 
         <div show-error class="form-group">
             <label class="control-label" for="date">Date</label>
-            <input type="date" id="date"  value="{{event.date_start}}" ng-model="event.date_start" class="form-control"  required/>
+            <date-choose id="date" ng-model="event.date_start" ></date-choose>
         </div>
 
         <div class="form-group">
@@ -48,7 +48,7 @@
 
             <div class="form-group">
                 <label class="control-label" for="endDate">Ends</label>
-                <input type="date" id="endDate"  ng-model="event.date_end" value="{{event.date_end}}" class="form-control"/>
+                <date-choose id="endDate" ng-model="event.date_end" ></date-choose>
             </div>
 
         </div>
