--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -36,8 +36,14 @@ h1
 /*END HEADAER*/
 
 .preloader
-  height 7px
+  height 6px
   padding 0
+  margin 0
+  position: fixed;
+  width 100%
+  left 0
+  top 0
+  z-index 150
 
 .form-group
   &.label-block
